--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
   },
   "homepage": "https://github.com/johnrob1880/packet",
   "dependencies": {
-    "babel-core": "^6.7.4",
-    "babel-loader": "^6.2.4",
-    "webpack": "^1.12.14"
   },
   "devDependencies": {
     "babel": "^6.5.2",
-    "babel-preset-es2015": "^6.6.0"
+    "babel-preset-es2015": "^6.6.0",
+    "babel-core": "^6.7.4",
+    "babel-loader": "^6.2.4",
+    "webpack": "^1.12.14"
   }
 }
